# LLM_with_RAG_chatbot

./: .gitignore  Chatbot.ipynb  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
KO/: abdominal-aortic-aneurysm-screening.json  alcohol.json  alcohol.py  alcohol.txt  cardiovascular-prevention-diet-activity.json  cardiovascular-prevention-statin-use.json  diabetes-screening.json  hight-body-mass-index.json  hypertension-screening.json  pregnancy-healthy-weight-gain.json  prevent-obesity-morbidity-mortality.json  tobacco.json  tobacco.py  tobacco.txt
KO/clinical_calculators/: ascvd-2013.json  bmi.json  bsa.json  chadsvasc.json  ckd-epi-gfr-2021.json  cockcroft-gault-cr-cl.json  cockroft-gault-cr-cl.json  corr-ca-alb.json  mdrd-gfr.json  mean-arterial-pressure.json  nihss.json  wells.json
KO/code/: alcohol.py  tobacco.py
chatbots/: llm_with_ko_code_tools.py  llm_with_rag_kos_and_external_interpreter.py
llm_with_rag_chatbot/: README.md  chatbot.py  chatbot_ui.py  chatbots.py  comprehensive_convo.json  evaluators.py  openai_chatbot.py  openai_chatbot_with_assistant_api.py  openai_chatbot_with_internal_execution.py  shorthand_convo.json  test_chatbot_conversation.py  test_convo.json
llm_with_rag_chatbot/archive/: umgpt_chatbot.py
llm_with_rag_chatbot/templates/: index.html
src/: chatbot_cmd.py  chatbot_ui.py
src/chatbots/: __init__.py  (+8 more)
tests/: calculator_inquiry_convo.json  comprehensive_convo.json  evaluators.py  gen_knowledge_convo.json  metadata_convo.json  metadata_convo_generator.py  shorthand_convo.json  test_chatbot_conversation.py
(+17 files in other folders)
